Avoid return QImage::Format_Invalid from QPlatformScreen::format()

This can be used to set the pixmap format, and needs to be defined to
something sane even if there is no primary screen.

Task-number: QTBUG-81671
Change-Id: Ic0d41cec31ac71309123aa8bb8b840fa4a4122bb
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>